# um-robotics

./: .gitignore  LICENSE  README.md
assignment-5/: CMakeLists.txt  README.md  assignment5-start.py  isaac_sim_hsr_chris.py  isaac_sim_hsr_localization_start.py  package.xml  requirements.txt  response.tex  robocanes_hsr.py  score.txt
assignment-5/data/routes/sim_full_front_lap_pf/json/: 20251015_145323_edt_lap_0.json
assignment-5/launch/: hsr.launch  robocanes_hsr.launch  robocanes_hsr_correction_sim.launch  robocanes_hsr_pf_localization_movement_tester_sim.launch  robocanes_hsr_pf_localization_sim.launch  robocanes_hsr_pf_localization_start_sim.launch  robocanes_hsrb_nav.launch  robocanes_move_base.launch.xml
assignment-5/scripts/: hsr_isaac_controller_joy.py  hsr_lab_mover.py  hsr_pf_localization.py  init_package.sh  odom_correct_groundtruth.py
assignment-5/scripts/general_helpers/: README.md  general_helper.py  requirements.txt  tf_helper.py
assignment-6/: CMakeLists.txt  README.md  hsr_localization_world.py  package.xml  process_handler.py  responses.txt
assignment-6/launch/: robocanes_hsr_correction_sim.launch  rrt_navigation.launch
assignment-6/rviz/: rviz_assignment_6.rviz
assignment-6/scripts/: init_package.sh  rrt_students.py
final/: README.md  human_track_demo.webm
human-tracking/: CMakeLists.txt  README.md  package.xml  presentation.pptx  requirements.txt
human-tracking/config/: params.yaml
human-tracking/launch/: pointing_detector.launch  test_openpose.launch
human-tracking/rviz/: pointing_detector.rviz
human-tracking/scripts/: demo_cycle.py  human_point_follower.py  openpose_bridge.py  test_camera.py
human-tracking/world/: deploy.sh  human_arm_controller.py  human_point_follower_start.py  human_point_follower_table_demo_start.py  human_point_follower_world.py  table_demo_world.py
localization-navigation/: .gitignore  CMakeLists.txt  README.md  hsr_localization_world.py  isaac_sim_hsr_chris.py  isaac_sim_hsr_localization_start.py  package.xml  robocanes_hsr.py  start_localization.py
localization-navigation/config/move_base/: move_base_chris.yaml
localization-navigation/config/robot_move/: rc_lab_pos.json
localization-navigation/launch/: hsr.launch  robocanes_hsr.launch  robocanes_hsr_correction_sim.launch  robocanes_hsr_pf_localization_movement_tester_sim.launch  robocanes_hsr_pf_localization_sim.launch  robocanes_hsr_pf_localization_start_sim.launch  robocanes_hsrb_nav.launch  robocanes_move_base.launch.xml
localization-navigation/maps/isaac_rc_lab_uyen/processed/: map.pgm  map.yaml
localization-navigation/scripts/: hsr_lab_mover.py  hsr_pf_localization.py  hsr_simple_mover.py
localization-navigation/scripts/general_helpers/: general_helper.py  rviz_helper.py
rrt-path-planning/: CMakeLists.txt  README.md  hsr_localization_world.py  package.xml  requirements.txt  start_rrt.py
rrt-path-planning/launch/: robocanes_hsr_correction_sim.launch  rrt_navigation.launch
rrt-path-planning/rviz/: hsr_pf_localization_sim.rviz
rrt-path-planning/scripts/: rrt_planner.py
