<?xml version="1.0"?>
<package format="2">
  <name>hsr-localization-navigation</name>
  <version>0.0.0</version>
  <description>Particle filter localization and autonomous navigation for the Toyota HSR</description>

  <maintainer email="alexmorrow239@gmail.com">Alex Morrow</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
